@@ -3,18 +3,20 @@
 this repository contains the full copyright notices and license terms. -->
 <form col="6">
     <label name="party"/>
-    <field name="party"/>
-    <label name="sequence"/>
-    <field name="sequence"/>
-    <newline/>
-    <label name="name"/>
-    <field name="name"/>
+    <field name="party" colspan="5"/>
+    <label name="party_name"/>
+    <field name="party_name"/>
     <group colspan="2" col="-1" id="checkboxes">
         <label name="active"/>
         <field name="active"
             xexpand="0" width="25"/>
         <!-- Add here some checkboxes ! -->
+        <label name="sequence"/>
+        <field name="sequence"/>
     </group>
+    <newline/>
+    <label name="name"/>
+    <field name="name"/>
     <newline/>
     <label name="street"/>
     <field name="street" colspan="3"/>
