@@ -1,3 +1,5 @@
+* Support attention party in address format
+* Add party name on address
 * Remove support for Python 2.7
 
 Version 4.8.0 - 2018-04-23
